--- a/0_테스트.html
+++ b/0_테스트.html
@@ -5,7 +5,7 @@
 <title>존잘 권태혁의 개쩌는 블로그</title>
 </head>
 <body>
-	<img src = "D:/4_Front_workspace/jonjal.jpg" width = "500"> <br><br>
+	<img src = "jonjal.png" width = "500"> <br><br>
 	
 	ㅎㅇ<br><br>
 	
