--- a/0_테스트.html
+++ b/0_테스트.html
@@ -5,8 +5,11 @@
 <title>존잘 권태혁의 개쩌는 블로그</title>
 </head>
 <body>
-	<h1>존잘 권태혁의 개쩌는 블로그에 오신걸 환영합니다.</h1>
-	<img src = "https://ifh.cc/g/nspGaT.jpg" width = "500"> <br><br>
+	
+	<img src = "https://ifh.cc/g/5QJ6rp.png" width = 40 style = "display:inline;">
+	<h1 style = "display: inline;">존잘 권태혁의 개쩌는 블로그에 오신걸 환영합니다.</h1><br>
+	<hr>
+	<img src = https://ifh.cc/g/nspGaT.jpg" width = "500"> <br><br>
 	
 	ㅎㅇ<br><br>
 	
@@ -14,5 +17,8 @@
 	
 	<!-- 사실 ㅈ밥임 ㅋㅋ -->
 	깝치지마라.
+	<hr>
+	<h3>댓글</h3>
+	손동준 : 태혁씨 공부나 하세요 <br>
 </body>
 </html>
