--- a/0_테스트.html
+++ b/0_테스트.html
@@ -20,5 +20,8 @@
 	<hr>
 	<h3>댓글</h3>
 	<b>손동준</b> : 태혁씨 공부나 하세요 <br>
+	&nbsp;&nbsp;
+	<img src = "https://ifh.cc/g/PXZFrS.png" width = 10 style = "display:inline;">
+	<b>권태혁</b> : 줄줄... <br>
 </body>
 </html>
